# enel-stop

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.toml  enel_rss_muntenia.xml  scrape.py
.github/workflows/: docker-image.yml  image-amd64.yml  image-arm64.yml  rust.yml
api_gen/: Cargo.toml
api_gen/src/: main.rs
browsenscrape/: Cargo.toml
browsenscrape/src/: configuration.rs  lib.rs  main.rs  rss_reader.rs
browsenscrape/tests/: redis_integration_test.rs
common/: Cargo.toml
common/src/: configuration.rs  lib.rs  persistence.rs
conf/: config-prod.toml  config.toml
crawler/: Cargo.toml
crawler/src/: main.rs  rss_reader.rs
db/: Dockerfile  README.md  docker-liquibase.properties  liquibase.properties  run-liquibase-bash-k8s.sh  run-liquibase-docker.sh  run-liquibash-fish-k8s.sh
db/changelog/: db.changelog-master.sql  db.changelog-master.yaml
db/changelog/changes/: 001-create-incidents-table.sql  002-create-sequence.sql  003-add-seq-id.sql  004-uniq-external-id.sql  005-remove-datetime.sql  006-increase-length.sql
db/kubernetes/: liquibase-job.yaml
db/lib/: .gitignore
k8s/: cron_deployment.yaml  deployment.yaml  migration_job.yaml
k8s-selenium/: README.md  sample_scraper.py
k8s-selenium/base/: deployment.yaml  kustomization.yaml  namespace.yaml  selenium-deployment.yaml  selenium-hub-deployment.yaml  selenium-hub-service.yaml  selenium-service.yaml  service.yaml
k8s-selenium/overlays/local/: kustomization.yaml  service-patch.yaml
k8s-selenium/samples/: sample_scraper.py
k8s/base/: cron_deployment.yaml  deployment-web.yaml  deployment-webapp.yaml  ingress-web.yaml  ingress-webapp.yaml  ingress.yaml  kustomization.yaml  service-webapp.yaml  service.yaml  web-deployment.yaml  web-pod-monitor.yaml
k8s/overlays/prod/: cron-deployment-patch.yaml  db-secret.yaml  kustomization.yaml
kustomize/: cron_deployment.yaml  kustomization.yaml  namespace.yaml
migration/: Cargo.toml
migration/src/: lib.rs  main.rs
migration/src/migrations/: mod.rs  postgresql.rs  recreate_sorted_set.rs  rename_prefix.rs  sorted_set.rs
src/: configuration.rs  lib.rs  main.rs  notifications.rs  param_validation.rs  rss_reader.rs
supply-chain/: config.toml
viewer/: .env  .env.production  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
viewer/src/: App.vue
viewer/src/assets/: main.css
viewer/src/components/: TheWelcome.vue
viewer/src/router/: index.js
viewer/src/views/: AboutView.vue  CountView.vue
web_server/: Cargo.toml
web_server/src/: api.rs  lib.rs  main.rs  metrics.rs  redis_store.rs  rss_reader.rs  scraper_api.rs  web_api.rs
web_server/src/migration/: mod.rs  sorted_set.rs
web_server/src/scraper/: mod.rs  persistence.rs  rss_reader.rs  scraper_api.rs
web_server/tests/: api_integration.rs  persistence.rs  redis_integration_test.rs  redis_migration_test.rs  rss-outages-test.xml  rss-outages.xml  scraper_api.rs
web_server/tests/common/: mod.rs
webapp/: .gitignore  nginx.conf  package-lock.json  package.json  vite.config.ts
webapp/src/: App.vue  main.ts
webapp/src/components/: Counter.vue  HelloWorld.vue  IncidentsList.vue  Lister.vue  MapTimeline.vue  ThemeSwitcher.vue
webapp/src/data/: counties.ts
webapp/src/router/: index.ts
webapp/src/views/: HomeView.vue  ListerView.vue  MapView.vue
