# [package]
# name = "enel_stop"
# version = "0.9.2"
# edition = "2021"

[workspace]
members = ["web_server", "common", "browsenscrape", "api_gen"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prometheus-client = "0.23.1"

tokio = { version = "1.42.0", features = [
    "macros",
    "time",
    "rt-multi-thread",
    "fs",
    "sync",
    "io-util",
] }

axum = { version = "0.8.1" }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "macros", "yaml"] }

rss = "2.0.5"
config = "0.15.11"
log = "0.4.27"
simple_logger = "5.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

redis = { version = "0.30.0", features = ["tokio-comp"] }
redis-test = { version = "0.10.0", features = ["bytes"] }

regex = "1.4.2"

chrono = { version = "0.4.39", features = ["serde"] }

# headless browse
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }

reqwest = { version = "0.12.12", features = ["blocking"] }

testcontainers = { version = "0.23.3", features = ["blocking"] }
