[workspace]
members = ["web_server", "common", "api_gen", "migration"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
prometheus-client = "0.23.1"

tokio = { version = "1.42.0", features = [
    "macros",
    "time",
    "rt-multi-thread",
    "fs",
    "sync",
    "io-util",
] }

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }

axum = { version = "0.8.1" }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "macros", "yaml"] }

rss = "2.0.5"
config = "0.15.11"
log = "0.4.27"
simple_logger = "5.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

redis = { version = "0.30.0", features = ["tokio-comp"] }
redis-test = { version = "0.10.0", features = ["bytes"] }

regex = "1.4.2"

chrono = { version = "0.4.39", features = ["serde"] }

testcontainers = { version = "0.24.0", features = ["blocking"] }
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
