[package]
name = "browsenscrape"
version = "0.1.0"
edition = "2021"

[dependencies]

common = { path = "../common" }
headless_chrome = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
rss = { workspace = true }
config = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
testcontainers = { workspace = true }
