[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

redis = { workspace = true }
redis-test = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
web_server = { path = "../web_server" }