[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
simple_logger = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
lazy_static = "1.5.0"

[dev-dependencies]
testcontainers = { workspace = true }
chrono = { workspace = true }
browsenscrape = { path = "../browsenscrape" }