[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
simple_logger = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rss = { workspace = true }
prometheus-client = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }